# shockwave

./: .clang-format  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  tools.py
.github/actions/setup-tooling/: action.yml
.github/workflows/: build.yml  check-format.yml  coverage.yml
cmake/: CodeCoverage.cmake  config.cmake.in  macros.cmake
include/: CMakeLists.txt
include/shockwave/: CMakeLists.txt  shockwave.h
include/shockwave/math/: matrix.h  matrix.inl.hpp
include/shockwave/memory/: Pool.h  allocator.h
include/shockwave/utility/: DynamicBitset.h  assert.h  repeat.h  types.h
scripts/: copy-compile-commands.py  copy-if-exists.cmake  run-clang-format.py
src/: CMakeLists.txt  shockwave.cpp
test/: CMakeLists.txt  test.cpp
test/math/: matrix.cpp
test/memory/: Pool.cpp  allocator.cpp
test/utility/: DynamicBitset.cpp  assert.cpp
